# B2-sfsu-spring2013

./: .gitignore  CMakeLists.txt  Makefile  MultiResImageRegistrationMattes.cxx  MultiResImageRegistrationViola.cxx  README.md
Data/: CT_3D.hdr  T1_Rare_3D.hdr  T2_Rare_3D.hdr  test.dcm
Data/Brain/: 1e5a10f17.txt  README  brainweb1e1a10f20Rot20Tx20.mha  brainweb1e5a10f17Rot20Tx20.mha
output/: Bins&Metric.eps  RegistrationMetric.eps  RegistrationTranslations.eps  plots.gnup  presentation.ppt  result128bins.txt  result200bins.txt  result250bins.txt  result300bins.txt  results.txt  results.xlsx
output/R10T15/: RegistrationMetric.eps
output/R10T15/100_200_0.9_3/: RegistrationMetric.eps  RegistrationTranslations.eps
output/R10T15/128_200_0.5_3/: RegistrationMetric.eps  RegistrationTranslations.eps
output/R10T15/128_200_0.9_3/: RegistrationTranslations.eps
output/R10T15/500_200_0.5_3/: RegistrationMetric.eps  RegistrationTranslations.eps
output/R10T15/500_200_0.9_3/: RegistrationMetric.eps  RegistrationTranslations.eps
output/R10T15/500_300_0.9_3/: RegistrationMetric.eps  RegistrationTranslations.eps
output/R10T15/500_300_0.9_6/: RegistrationMetric.eps  RegistrationTranslations.eps
output/R20T20/: RegistrationMetric.eps  RegistrationTranslations.eps
source/: CMakeCache.txt  CMakeLists.txt  DicomPrintPatientInformation.cxx  MultiResImageRegistrationMattes.cxx  cmake_install.cmake
